--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "webpack": "^1.12.13"
   },
   "dependencies": {
+    "domready": "^1.0.8",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
   }
