use cluster list

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,11 @@
   "rules": {
     "no-undef": 2
   },
+  "env": {
+    "browser": true,
+    "node": false,
+    "es6": true
+  },
   "globals": {
     "console": true
   }
