--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": ["react", "stage-2", "es2015"],
+  "presets": ["react", "stage-0", "stage-2", "es2015"],
+  "plugins": ["transform-class-properties"]
 }
