--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "domready": "^1.0.8",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-modal-dialog": "^2.0.0"
+    "react-modal-dialog": "^2.0.0",
+    "redux": "^3.3.1"
   }
 }
