--- a/package.json
+++ b/package.json
@@ -16,14 +16,20 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
+    "body-parser": "^1.14.2",
+    "express": "^4.13.4",
+    "nodemon": "^1.8.1",
+    "sleep": "^3.0.0",
     "webpack": "^1.12.13"
   },
   "dependencies": {
     "domready": "^1.0.8",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-modal-dialog": "^2.0.0",
     "react-redux": "^4.4.0",
-    "redux": "^3.3.1"
+    "redux": "^3.3.1",
+    "redux-thunk": "^1.0.3"
   }
 }
