--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-dom": "^0.14.7",
     "react-modal-dialog": "^2.0.0",
     "react-redux": "^4.4.0",
+    "react-router": "^2.0.0",
+    "react-router-redux": "^4.0.0",
     "redux": "^3.3.1",
     "redux-thunk": "^1.0.3"
   }
