add some styles

--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "css-loader": "^0.23.1",
     "es6-promise": "^3.1.2",
     "express": "^4.13.4",
+    "lost": "^6.7.2",
     "nodemon": "^1.8.1",
+    "postcss-custom-properties": "^5.0.0",
+    "postcss-import": "^8.0.2",
+    "postcss-loader": "^0.8.1",
     "react-styleable": "^2.2.3",
     "sleep": "^3.0.0",
     "style-loader": "^0.13.0",
@@ -28,6 +32,7 @@
   },
   "dependencies": {
     "domready": "^1.0.8",
+    "google-material-color": "^1.2.6",
     "isomorphic-fetch": "^2.2.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
